Updated genius css

--- a/JS/GeniusGame/style.css
+++ b/JS/GeniusGame/style.css
@@ -61,3 +61,19 @@ body {
     color: white;
     text-align: center;
 }
+
+@media only screen and (max-device-width: 768px) {
+    .enabled:hover {
+        opacity: 100%;
+    }
+
+    #game-container {
+        height: 225px;
+        width: 225px;
+    }
+
+    .genius-colors {
+        height: 114px;
+        width: 114px;
+    }
+}
