--- a/JS/Cronometro/style.css
+++ b/JS/Cronometro/style.css
@@ -1,31 +1,78 @@
 body {
-    background-color: rgba(0, 0, 0, 0.884);
-    font-family: consolas;
+    background-color: rgb(0, 0, 0);
+    display: grid;
+    place-items: center;
 }
 
-#container {
-    text-align: center;
-    border: 2px solid;
-    border-radius: 25px;
-    background-color: rgba(0, 0, 0, 0.692);
+#clock {
+    display: grid;
 }
 
-#timeDisplay {
+#time {
+    place-self: center;
     color: white;
-    font-size: 6em;
+    font-size: 500%;
+    font-family: 'Roboto', sans-serif;
 }
 
-.timerButtons {
-    background-color: rgba(0, 0, 0, 0.411);
+#buttons {
+    place-self: center;
+}
+
+button {
+    margin: 0px 15px;
+    border-radius: 50px;
+    padding: 12px 40px;
+    background-color: black;
+    font-weight: bolder;
+    font-family: sans-serif;
+    transition-duration: 0.4s;
+}
+
+#start-button {
+    color: rgb(0, 192, 0);
+    border-color: rgb(0, 192, 0);
+}
+
+#start-button:hover {
     color: white;
-    font-family: consolas;
-    border: 2px solid;
-    border-radius: 10px;
-    margin: 0px 0px 10px 10px;
-    padding: 4px 12px;
-    cursor: pointer;
+    background-color: rgb(0, 192, 0);
+    padding: 15px 50px
 }
 
-.timerButtons:hover {
-    background-color: rgba(48, 48, 48, 0.507);
+#start-button:active {
+    transition: 0s;
+    background-color: rgb(0, 120, 0);
+}
+
+#stop-button {
+    color: grey;
+    border-color: grey;
+}
+
+#stop-button:hover {
+    color: white;
+    background-color: grey;
+    padding: 15px 50px
+}
+
+#stop-button:active {
+    transition: 0s;
+    background-color: rgb(65, 65, 65);
+}
+
+#reset-button {
+    color: rgb(192, 0, 0);
+    border-color: rgb(192, 0, 0);
+}
+
+#reset-button:hover {
+    color: white;
+    background-color: rgb(192, 0, 0);
+    padding: 15px 50px
+}
+
+#reset-button:active {
+    transition: 0s;
+    background-color: rgb(120, 0, 0);
 }
