--- a/JS/CalculadoraMedia/style.css
+++ b/JS/CalculadoraMedia/style.css
@@ -33,13 +33,15 @@ input[type=number] {
     border: 0px;
     border-radius: 15px;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 #submit {
     place-self: center;
     margin-top: 10px;
-    background-color: rgb(0, 255, 0);
-    border: 0px;
+    background-color: black;
+    color: rgb(0, 200, 0);
+    border: 1px solid rgb(0, 200, 0);
     border-radius: 50px;
     padding: 2px 5px;
     font-family: 'Roboto', sans-serif;
@@ -68,7 +70,7 @@ input[type=number] {
     visibility: hidden;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 500px) {
     h1 {
         font-size: xx-large;
     }
@@ -79,6 +81,8 @@ input[type=number] {
 
     #submit:hover {
         cursor: pointer;
-        transform: scale(1.10);
+        transform: scale(1.2);
+        color: white;
+        background-color: rgb(0, 200, 0);
     }
 }
