--- a/JS/JogoDaForca/style.css
+++ b/JS/JogoDaForca/style.css
@@ -1,49 +1,92 @@
-* {
-    font-family: monospace;
-    text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
+body {
     background-color: black;
+    display: grid;
+}
+
+#container {
+    place-self: center;
+    display: grid;
 }
 
 h1 {
-    color: white;
-    display: inline-block;
-    border-right: 2px solid white;
-    width: 13ch;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: typing 2s steps(13), flashing 1s infinite step-end;
+    font-size: 50px;
+    font-family: 'Arvo', sans-serif;
 }
 
 #myLabel {
-    padding-bottom: 1px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
     display: block;
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: white;
 }
 
 #guess {
-    width: 10%;
-    display: inline-block;
+    width: 20%;
+    place-self: center;
+    text-align: center;
     margin-bottom: 10px;
     background-color: white;
+    border: 0px;
+    border-radius: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 
 button {
-    background-color: white;
+    background-color: black;
+    min-width: 70px;
+    width: 30%;
+    place-self: center;
+    border-radius: 15px;
+    font-family: 'Roboto', sans-serif;
+    transition-duration: 0.4s;
+}
+
+#submit {
+    border: 2px solid grey;
+    color: grey;
 }
 
 p {
     color: white;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 10px;
 }
 
-@keyframes typing {
-    from {
-        width: 0;
+#yesButton {
+    margin: 10px 0px;
+    border: 2px solid rgb(0, 255, 0);
+    color: rgb(0, 255, 0);
+}
+
+#noButton {
+    border: 2px solid red;
+    color: red;
+}
+
+@media screen and (min-width: 500px) {
+    #submit:hover {
+        cursor: pointer;
+        transform: scale(1.2);
+        background-color: grey;
+        color: white;
     }
-}
 
-@keyframes flashing {
-    50% {
-        border-color: transparent;
+    #yesButton:hover {
+        cursor: pointer;
+        transform: scale(1.2);
+        background-color: rgb(0, 255, 0);
+        color: white;
+    }
+
+    #noButton:hover {
+        cursor: pointer;
+        transform: scale(1.2);
+        background-color: red;
+        color: white;
     }
 }
