--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap');
 body {
-    background-color: rgba(0, 0, 0, 0.938);
+    background-color: rgb(0, 0, 0);
     font-family: monospace;
     text-align: center;
 }
 
 h1 {
-    color: white;
+    color: rgb(255, 255, 255);
     display: inline-block;
     border-right: 2px solid white;
     width: 8ch;
@@ -17,7 +18,12 @@ h1 {
 
 a {
     text-decoration: none;
-    color: white;
+    color: rgb(180, 180, 180);
+    font-family: 'Roboto', sans-serif;
+}
+
+a:hover {
+    color: rgb(0, 255, 0);
 }
 
 @keyframes typing {
